--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,12 @@
   }
 }
 
+@import url('https://fonts.googleapis.com/css?family=Oswald');
+
+.header-oswald {
+  font-family: 'Oswald';
+}
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
